--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <aside class="footer-segment"> <a style="
     height: 44px;
     width: 320px;
-">Centre des Techniques Spatiales Optique Géométrique
+">Ecole Nationale Supérieure des Sciences Géodésiques et des Techniques Spatiales - Optique Géométrique
 - I3 - 2020/2021</a> </aside>
      
     
