--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <aside class="footer-segment"> <a style="
     height: 44px;
     width: 320px;
-">Ecole Nationale Supérieure des Sciences Géodésiques et des Techniques Spatiales - Optique Géométrique
+">ENSGTS - Optique Géométrique
 - I3 - 2021/2022</a> </aside>
      
     
