--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     height: 44px;
     width: 320px;
 ">ENSGTS - Optique Géométrique
-- I3 - 2021/2022</a> </aside>
+- I3  2021/2022</a> </aside>
      
     
   </section>
